Attempt to fix automatically added border radiuses on mobile Safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -96,6 +96,10 @@ html, body {
   height: 100%;
   max-width: 18rem;
 
+  input {
+    border-radius: 0;
+  }
+
   input[type="text"], input[type="email"] {
     width: 100%;
     height: 1.5rem;
